Add second server definition to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,77 @@
 version: "3.3"
 services:
-  server:
-    container_name: asa-server
-    hostname: asa-server
+  asa-server-1:
+    container_name: asa-server-1
+    hostname: asa-server-1
     entrypoint: "/usr/bin/start_server"
     user: gameserver
-    image: "mschnitzer/asa-linux-server"
-    stdin_open: true
-    tty: true
+    image: "mschnitzer/asa-linux-server:latest"
+    environment:
+      - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50
     ports:
       - 0.0.0.0:7777:7777/udp
       - 0.0.0.0:27020:27020/tcp
     depends_on:
-      - set-permissions
+      - set-permissions-1
     volumes:
-      - steam:/home/gameserver/Steam:rw
-      - steamcmd:/home/gameserver/steamcmd:rw
-      - server-files:/home/gameserver/server-files:rw
+      - steam-1:/home/gameserver/Steam:rw
+      - steamcmd-1:/home/gameserver/steamcmd:rw
+      - server-files-1:/home/gameserver/server-files:rw
     networks:
-      default:
-  set-permissions:
+      asa-network:
+  set-permissions-1:
     entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files'"
     user: root
     image: "opensuse/leap"
     volumes:
-      - steam:/steam:rw
-      - steamcmd:/steamcmd:rw
-      - server-files:/server-files:rw
+      - steam-1:/steam:rw
+      - steamcmd-1:/steamcmd:rw
+      - server-files-1:/server-files:rw
+#  asa-server-2:
+#    container_name: asa-server-2
+#    hostname: asa-server-2
+#    entrypoint: "/usr/bin/start_server"
+#    user: gameserver
+#    image: "mschnitzer/asa-linux-server:latest"
+#    environment:
+#      - ASA_START_PARAMS=TheIsland_WP?listen?Port=7778?RCONPort=27021?RCONEnabled=True -WinLiveMaxPlayers=50
+#    ports:
+#      - 0.0.0.0:7778:7778/udp
+#      - 0.0.0.0:27021:27021/tcp
+#    depends_on:
+#      - set-permissions-2
+#    volumes:
+#      - steam-2:/home/gameserver/Steam:rw
+#      - steamcmd-2:/home/gameserver/steamcmd:rw
+#      - server-files-2:/home/gameserver/server-files:rw
+#    networks:
+#      asa-network:
+  set-permissions-1:
+    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files'"
+    user: root
+    image: "opensuse/leap"
+    volumes:
+      - steam-1:/steam:rw
+      - steamcmd-1:/steamcmd:rw
+      - server-files-1:/server-files:rw
+#  set-permissions-2:
+#    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files'"
+#    user: root
+#    image: "opensuse/leap"
+#    volumes:
+#      - steam-2:/steam:rw
+#      - steamcmd-2:/steamcmd:rw
+#      - server-files-2:/server-files:rw
 volumes:
-  steam:
-  steamcmd:
-  server-files:
+  steam-1:
+  steamcmd-1:
+  server-files-1:
+#  steam-2:
+#  steamcmd-2:
+#  server-files-2:
 networks:
-  default:
+  asa-network:
     attachable: true
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.name: 'asanet'
