--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     environment:
       - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50
     ports:
+      # Game port for player connections through the server browser
       - 0.0.0.0:7777:7777/udp
+      # RCON port for remote server administration
       - 0.0.0.0:27020:27020/tcp
     depends_on:
       - set-permissions-1
@@ -36,7 +38,9 @@ services:
 #    environment:
 #      - ASA_START_PARAMS=TheIsland_WP?listen?Port=7778?RCONPort=27021?RCONEnabled=True -WinLiveMaxPlayers=50
 #    ports:
+#      # Game port for player connections through the server browser
 #      - 0.0.0.0:7778:7778/udp
+#      # RCON port for remote server administration
 #      - 0.0.0.0:27021:27021/tcp
 #    depends_on:
 #      - set-permissions-2
