--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     image: "mschnitzer/asa-linux-server:latest"
     environment:
       - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50
+      - ENABLE_DEBUG=0
     ports:
       # Game port for player connections through the server browser
       - 0.0.0.0:7777:7777/udp
