--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - steam-1:/steam:rw
       - steamcmd-1:/steamcmd:rw
       - server-files-1:/server-files:rw
+      - cluster-shared:/cluster-shared:rw
 #  asa-server-2:
 #    container_name: asa-server-2
 #    hostname: asa-server-2
@@ -61,6 +62,7 @@ services:
 #      - steam-2:/steam:rw
 #      - steamcmd-2:/steamcmd:rw
 #      - server-files-2:/server-files:rw
+#      - cluster-shared:/cluster-shared:rw
 volumes:
   cluster-shared:
   steam-1:
