--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     entrypoint: "/usr/bin/start_server"
     user: gameserver
     image: "mschnitzer/asa-linux-server:latest"
+    tty: true
     environment:
       - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50 -clusterid=default -ClusterDirOverride="/home/gameserver/cluster-shared"
       - ENABLE_DEBUG=0
@@ -39,6 +40,7 @@ services:
 #    entrypoint: "/usr/bin/start_server"
 #    user: gameserver
 #    image: "mschnitzer/asa-linux-server:latest"
+#    tty: true
 #    environment:
 #      - ASA_START_PARAMS=ScorchedEarth_WP?listen?Port=7778?RCONPort=27021?RCONEnabled=True -WinLiveMaxPlayers=50 -clusterid=default -ClusterDirOverride="/home/gameserver/cluster-shared"
 #    ports:
