--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 version: "3.3"
 services:
-  asa-server-1:
-    container_name: asa-server-1
-    hostname: asa-server-1
-    entrypoint: "/usr/bin/start_server"
-    user: gameserver
-    image: "mschnitzer/asa-linux-server:latest"
+  asa-server:
+    container_name: asa-server
+    hostname: asa-server
+    image: "ghcr.io/jdogwilly/asa-linux-server:latest"
     tty: true
     environment:
       - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50 -clusterid=default -ClusterDirOverride="/home/gameserver/cluster-shared"
@@ -16,65 +14,29 @@ services:
       # RCON port for remote server administration
       - 0.0.0.0:27020:27020/tcp
     depends_on:
-      - set-permissions-1
+      - set-permissions
     volumes:
-      - steam-1:/home/gameserver/Steam:rw
-      - steamcmd-1:/home/gameserver/steamcmd:rw
-      - server-files-1:/home/gameserver/server-files:rw
+      - steam:/home/gameserver/Steam:rw
+      - steamcmd:/home/gameserver/steamcmd:rw
+      - server-files:/home/gameserver/server-files:rw
       - cluster-shared:/home/gameserver/cluster-shared:rw
       - /etc/localtime:/etc/localtime:ro
     networks:
       asa-network:
-  set-permissions-1:
+  set-permissions:
     entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files ; chown -R 25000:25000 /cluster-shared'"
     user: root
-    image: "opensuse/leap"
+    image: "ubuntu:24.04"
     volumes:
-      - steam-1:/steam:rw
-      - steamcmd-1:/steamcmd:rw
-      - server-files-1:/server-files:rw
+      - steam:/steam:rw
+      - steamcmd:/steamcmd:rw
+      - server-files:/server-files:rw
       - cluster-shared:/cluster-shared:rw
-#  asa-server-2:
-#    container_name: asa-server-2
-#    hostname: asa-server-2
-#    entrypoint: "/usr/bin/start_server"
-#    user: gameserver
-#    image: "mschnitzer/asa-linux-server:latest"
-#    tty: true
-#    environment:
-#      - ASA_START_PARAMS=ScorchedEarth_WP?listen?Port=7778?RCONPort=27021?RCONEnabled=True -WinLiveMaxPlayers=50 -clusterid=default -ClusterDirOverride="/home/gameserver/cluster-shared"
-#    ports:
-#      # Game port for player connections through the server browser
-#      - 0.0.0.0:7778:7778/udp
-#      # RCON port for remote server administration
-#      - 0.0.0.0:27021:27021/tcp
-#    depends_on:
-#      - set-permissions-2
-#    volumes:
-#      - steam-2:/home/gameserver/Steam:rw
-#      - steamcmd-2:/home/gameserver/steamcmd:rw
-#      - server-files-2:/home/gameserver/server-files:rw
-#      - cluster-shared:/home/gameserver/cluster-shared:rw
-#      - /etc/localtime:/etc/localtime:ro
-#    networks:
-#      asa-network:
-#  set-permissions-2:
-#    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files ; chown -R 25000:25000 /cluster-shared'"
-#    user: root
-#    image: "opensuse/leap"
-#    volumes:
-#      - steam-2:/steam:rw
-#      - steamcmd-2:/steamcmd:rw
-#      - server-files-2:/server-files:rw
-#      - cluster-shared:/cluster-shared:rw
 volumes:
   cluster-shared:
-  steam-1:
-  steamcmd-1:
-  server-files-1:
-#  steam-2:
-#  steamcmd-2:
-#  server-files-2:
+  steam:
+  steamcmd:
+  server-files:
 networks:
   asa-network:
     attachable: true
