--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,17 @@ services:
     image: "ghcr.io/jdogwilly/asa-linux-server:latest"
     tty: true
     environment:
+      # Server start parameters (map, ports, cluster config)
       - ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=50 -clusterid=default -ClusterDirOverride="/home/gameserver/cluster-shared"
+
+      # RCON Configuration (Optional - Kubernetes/Production style)
+      # These env vars take priority over ASA_START_PARAMS for RCON config
+      # Uncomment to use environment variables instead of ASA_START_PARAMS
+      # - ADMIN_PASSWORD=YourSecureAdminPassword
+      # - RCON_PORT=27020
+      # - RCON_ENABLED=true
+
+      # Debug mode (0=disabled, 1=enabled - sleeps instead of starting server)
       - ENABLE_DEBUG=0
     ports:
       # Game port for player connections through the server browser
