feat: Add automated Proton-GE version updates (#9)
* feat: add automated Proton-GE version updates

- Add Renovate custom manager to track GloriousEggroll/proton-ge-custom releases
- Create GitHub Action workflow to automatically calculate SHA512 checksums
- Workflow triggers only on Renovate PRs updating Proton version
- Downloads tarball, generates checksum, and commits to PR branch
- Fully automated Proton updates (version bump + checksum generation)
- Update TO-DO.md to mark Proton automation as completed
- Update CHANGELOG.md with automation enhancement

This completes Phase 5 CI/CD enhancement from TO-DO.md for automated
Proton version updates.

* fix: address Kusari security findings in Proton checksum workflow

Security improvements:
1. Strengthen bot authentication check
   - Add github.event.pull_request.user.type == 'Bot' verification
   - Prevents spoofing of github.actor which could allow attackers to bypass security

2. Pin marocchino/sticky-pull-request-comment action to commit hash
   - Prevents supply chain attacks via compromised action versions
   - Pinned to: 331f8f5b4a9b46330b0f00d5dc69d7aef0c3f01c (v2)

3. Replace manual git commands with git-auto-commit-action
   - Use stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 (v5)
   - Handles credentials securely without manual configuration
   - Follows principle of least privilege for credential management

Addresses all high-severity issues identified by Kusari Inspector.

--- a/renovate.json
+++ b/renovate.json
@@ -21,6 +21,17 @@
       ],
       "datasourceTemplate": "deb",
       "registryUrlTemplate": "https://archive.ubuntu.com/ubuntu?suite={{suite}}&components=main,universe,multiverse,restricted&binaryArch=amd64"
+    },
+    {
+      "customType": "regex",
+      "description": "Track GloriousEggroll Proton-GE releases in start_server script",
+      "fileMatch": ["^root/usr/bin/start_server$"],
+      "matchStrings": [
+        "PROTON_VERSION=\"(?<currentValue>\\d+-\\d+)\""
+      ],
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "GloriousEggroll/proton-ge-custom",
+      "extractVersionTemplate": "^GE-Proton(?<version>.+)$"
     }
   ]
 }
